<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="save_settings">저장</string>
    <string name="load_settings">불러오기</string>
    <string name="information_title_summon_friend">친구 소환 정보</string>
    <string name="information_message_summon_friend">친구는 입력한 플레이 타임 종료 15초 전에 소환됩니다.</string>
    
    
    <string name="app_name">AutoMonsterTaiming</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="tv_text_app_title">몬스터 길들이기 오토</string>
    <string name="tv_text_wanted_item">● 구입할 아이템</string>
    <string name="cb_text_item_shield">방어력 증가</string>
    <string name="cb_text_item_sword">공격력 증가</string>
    <string name="cb_text_item_friend_time">친구 시간 증가</string>
    <string name="cb_text_item_auto_skill">자동스킬</string>
    
    <string name="tv_text_summon_friend">● 친구 소환</string>
    <string name="rb_text_summon_friend">친구 데려가기</string>
    <string name="rb_text_no_summon_friend">데려가지 않기</string>
    
    <string name="tv_text_play_time">● 플레이 시간</string>
    
    <string name="et_text_play_time">시간을 초 단위로 입력하세요.</string>
    
    <string name="tv_text_open_chest">● 보상 상자</string>
    
    <string name="rb_text_left_reward_chest">좌측 보상 상자</string>
    <string name="rb_text_center_reward_chest">가운데 보상 상자</string>
    <string name="rb_text_right_reward_chest">우측 보상 상자</string>
    <string name="rb_text_random_reward_chest">랜덤 보상 상자</string>
    
    <string name="tv_text_coordinate">● 좌표</string>
    <string name="tv_text_item_shield_coordinate">아이템(방어력 증가)</string>
    <string name="tv_text_item_sword_coordinate">아이템(공격력 증가)</string>
    <string name="tv_text_item_friend_time_coordinate">아이템(친구 시간 증가)</string>
    <string name="tv_text_item_auto_skill_coordinate">아이템(자동 스킬)</string>
    <string name="tv_text_x_coordinate">X : </string>
    <string name="tv_text_y_coordinate">Y : </string>
    <string name="et_text_enter_coordinate">좌표를 입력하세요</string>
    
    <string name="btn_text_start_service">오토 서비스 시작</string>
    <string name="btn_text_stop_service">오토 서비스 중지</string>
    <string name="btn_text_stop_application">어플리케이션 중지</string>

</resources>
