<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MonsterTaimingMainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- App Title -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_app_title"
                android:textStyle="italic"
                android:textSize="30sp"
                android:layout_marginBottom="30dp" />

            <!-- Items want to buy -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_wanted_item"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/cb_item_shield"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_text_item_shield" />

                    <CheckBox
                        android:id="@+id/cb_item_sword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_text_item_sword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/cb_item_friend_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_text_item_friend_time" />

                    <CheckBox
                        android:id="@+id/cb_item_auto_skill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_text_item_auto_skill" />
                </LinearLayout>
            </LinearLayout>

            <!-- Friend wants to summon -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_summon_friend"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp" >

                <RadioButton
                    android:id="@+id/rb_summon_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_text_summon_friend" />

                <RadioButton
                    android:id="@+id/rb_no_summon_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_text_no_summon_friend"
                    android:checked="true" />
            </RadioGroup>

            <!-- Play time -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_play_time"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_play_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_text_play_time"
                android:layout_marginBottom="30dp"
                android:inputType="number" />

            <!-- Reward chest -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_open_chest"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="30dp" >

                <RadioButton
                    android:id="@+id/rb_left_reward_chest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_text_left_reward_chest" />

                <RadioButton
                    android:id="@+id/rb_center_reward_chest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_text_center_reward_chest"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/rb_right_reward_chest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_text_right_reward_chest" />

                <RadioButton
                    android:id="@+id/rb_random_reward_chest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_text_random_reward_chest" />
            </RadioGroup>

            <!-- Touch Event Coordinate -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_coordinate"
                android:textSize="20sp" />

            <!-- Shield Item Coordinate -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_item_shield_coordinate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_x_coordinate" />

                <EditText
                    android:id="@+id/et_item_shield_x_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_text_enter_coordinate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_y_coordinate" />

                <EditText
                    android:id="@+id/et_item_shield_y_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_text_enter_coordinate" />
            </LinearLayout>

            <!-- Sword Item Coordinate -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_item_sword_coordinate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_x_coordinate" />

                <EditText
                    android:id="@+id/et_item_sword_x_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_text_enter_coordinate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_y_coordinate" />

                <EditText
                    android:id="@+id/et_item_sword_y_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_text_enter_coordinate" />
            </LinearLayout>
            
            <!-- Friend Time Item Coordinate -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_item_friend_time_coordinate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_x_coordinate" />

                <EditText
                    android:id="@+id/et_item_friend_time_x_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_text_enter_coordinate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_y_coordinate" />

                <EditText
                    android:id="@+id/et_item_friend_time_y_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_text_enter_coordinate" />
            </LinearLayout>
            
            <!-- Auto Skill Item Coordinate -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_item_auto_skill_coordinate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_x_coordinate" />

                <EditText
                    android:id="@+id/et_item_auto_skill_x_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_text_enter_coordinate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_y_coordinate" />

                <EditText
                    android:id="@+id/et_item_auto_skill_y_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_text_enter_coordinate" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>